syntax = "proto3";

package cloudproxy.v1;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/cloudproxy/v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";

service Manager {
  rpc Version(google.protobuf.Empty) returns (web3eye.VersionResponse) {
    option (google.api.http) = {
      post : "/v1/version"
      body : "*"
    };
  }
  rpc UrlToVector(UrlToVectorReq) returns (UrlToVectorResp){}
}


message UrlToVectorReq{
  string Url = 10;
  chain.UrlType UrlType = 20;
}

message UrlToVectorResp{
  repeated float Vector = 10;
  string Msg = 20;
}